force-app/main/default/objects/taralex__XappexFilesSettings__mdt/taralex__XappexFilesSettings__mdt.object-meta.xml
<CustomObject>
    <description>Stores Object API name, File Id or File Version Id and File name.</description>
    <label>XappexFilesSetting</label>
    <pluralLabel>XappexFilesSettings</pluralLabel>
</CustomObject>