force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Component_Files__c.field-meta.xml
<CustomField>
    <fullName>taralex__Component_Files__c</fullName>
    <description>Set of Files comma separated Ids, that determines, which Files should be displayed in XL-Connector Templates component.</description>
    <inlineHelpText>Set of Files Ids for XL-Connector Templates component</inlineHelpText>
    <label>Component Files</label>
    <type>TextArea</type>
</CustomField>