force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Custom_Component_Files__c.field-meta.xml
<CustomField>
    <fullName>taralex__Custom_Component_Files__c</fullName>
    <label>Custom Component Files</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>