force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__External_File_Token__c.field-meta.xml
<CustomField>
    <fullName>taralex__External_File_Token__c</fullName>
    <label>External File Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>