force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Field_Range__c.field-meta.xml
<CustomField>
    <fullName>taralex__Field_Range__c</fullName>
    <label>Field Range</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>