force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__FileId__c.field-meta.xml
<CustomField>
    <fullName>taralex__FileId__c</fullName>
    <description>Could be populated with File or File Version Id</description>
    <inlineHelpText>File or File Version Id for download with the Get XL-File button</inlineHelpText>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>