force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__FileName__c.field-meta.xml
<CustomField>
    <fullName>taralex__FileName__c</fullName>
    <description>Stores File Name</description>
    <inlineHelpText>File Name with extension (.txt) or without it</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>