force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>taralex__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active records are displayed in XL-Connector Template Setup</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>