force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>taralex__Object_API_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>