force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Use_Field_Range__c.field-meta.xml
<CustomField>
    <fullName>taralex__Use_Field_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Field Range</label>
    <type>Checkbox</type>
</CustomField>