force-app/main/default/objects/taralex__XappexFilesSettings__mdt/fields/taralex__Xappex_Processed_Flow__c.field-meta.xml
<CustomField>
    <fullName>taralex__Xappex_Processed_Flow__c</fullName>
    <label>Xappex Processed Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>