force-app/main/default/objects/taralex__XappexFilesSettings__mdt/validationRules/taralex__File_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>taralex__File_Data</fullName>
    <active>false</active>
    <description>At least one of the fields - FileId or FileName must be filled</description>
    <errorConditionFormula>AND( ISBLANK( taralex__FileId__c ) , ISBLANK( taralex__FileName__c ) )</errorConditionFormula>
    <errorMessage>At least one of the fields (FileId, FileName) must be filled</errorMessage>
</ValidationRule>