force-app/main/default/objects/taralex__XappexFilesSettings__mdt/listViews/taralex__All_Settings.listView-meta.xml
<ListView>
    <fullName>taralex__All_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>taralex__FileId__c</columns>
    <columns>taralex__Component_Files__c</columns>
    <columns>DeveloperName</columns>
    <columns>taralex__Object_API_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
    <language>en_US</language>
</ListView>